  AbstractFilteredTableModel.getSearchValueAt() second parameter changed to TableColumn, some minor refactoring
  EntityUtil, testing related methods moved to EntityTestUnit
  EntityTablePanel.getInputProvider() improved, uses new TextInputProvider constructor with max length parameter
  EditModelValue replaced by factory class EditModelValues
  EntityUiUtil, javadoc improvements
  ControlProvider, javadoc improvements
  EntityPanelProvider, javadoc improved
  UiUtil, javadoc improved
  ExceptionDialog, javadoc improved
  DoubleField, javadoc improved
  LoginPanel, javadoc improved
  Configuration, javadoc improved, renamed a few properties, added constants for default numerical values
  Some javadoc improvements
  EntityEditPanel.createEntityFieldPanel() removed
  EntityUiUtil.createEntityFieldPanel() removed
  DateUtilTest, added a single test
  ExceptionDialog.close() re-added
  UiUtil.getDateFromUser() improved
  EmployeeEditPanel in empdept demo uses DateInputPanel with button
  Control.toString() implemented, returns name
  Item, single parameter constructor added
  ValueListInputProviderTest added
  TristateCheckBoxTest added
  EntityUiUtilTest added
  UiUtil.createFrame() removed
  Removed a few magic numbers
  PropertyImpl, finalization improvements
  ControlProvider, finalized some classes
  States, synchronized notifyObservers() methods
  AbstractEntityConnectionProvider, synchronized getConnectionInternal() and setConnection()
  Database.getDriverClassName() added
0.6.8
  UiUtil.selectValue() generified
  AbstractDatabase now implements getDriverClassName()
  Removed a couple of "true" and "false" hardcoded strings, replaced with Boolean.TRUE.toString() and Boolean.FALSE.toString() respectively
  EntityEditPanelTestUnit added
  EmployeeEditPanelTest added
  EntityApplicationPanelTestUnit added
  EmpDeptAppPanelTest added
  EntityApplicationPanel.startApplication() modified to allow testing